[gd_scene load_steps=8 format=3 uid="uid://cdpg41qhu2cai"]

[ext_resource type="Script" path="res://intro.gd" id="1_ku3an"]
[ext_resource type="Texture2D" uid="uid://belkc0tbvy0cr" path="res://assets/bg.png" id="1_shhpi"]
[ext_resource type="Texture2D" uid="uid://c50srkm0o7qhr" path="res://assets/icons/eyedropper.png" id="3_01lco"]
[ext_resource type="Script" path="res://username_edit.gd" id="3_vt1vp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2wll"]
bg_color = Color(0.105882, 0.105882, 0.105882, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jqcba"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iraag"]
bg_color = Color(0.133196, 0.133196, 0.133196, 1)

[node name="intro" type="Node2D"]
script = ExtResource("1_ku3an")

[node name="bg" type="Sprite2D" parent="."]
modulate = Color(0.0768358, 0.0768358, 0.0768358, 1)
z_index = -999
position = Vector2(175, 67)
scale = Vector2(7.36167, 4.50125)
texture = ExtResource("1_shhpi")

[node name="CustomizeContainer" type="MarginContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="MarginContainer" type="MarginContainer" parent="CustomizeContainer"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 100

[node name="IntroPanel" type="Panel" parent="CustomizeContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d2wll")

[node name="VBoxContainer" type="VBoxContainer" parent="CustomizeContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="UsernameContainer" type="MarginContainer" parent="CustomizeContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 66
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 66

[node name="UsernamePanel" type="Panel" parent="CustomizeContainer/MarginContainer/VBoxContainer/UsernameContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jqcba")

[node name="UsernameEdit" type="LineEdit" parent="CustomizeContainer/MarginContainer/VBoxContainer/UsernameContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
placeholder_text = "username"
alignment = 1
max_length = 9
caret_blink = true
script = ExtResource("3_vt1vp")

[node name="ColorPickerContainer" type="CenterContainer" parent="CustomizeContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CustomizeContainer/MarginContainer/VBoxContainer/ColorPickerContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="CustomizeContainer/MarginContainer/VBoxContainer/ColorPickerContainer/MarginContainer"]
texture = ExtResource("3_01lco")

[node name="ColorPickerButton" type="ColorPickerButton" parent="CustomizeContainer/MarginContainer/VBoxContainer/ColorPickerContainer/MarginContainer/Sprite2D"]
z_index = -4096
offset_left = -16.0
offset_top = -17.0
offset_right = 19.0
offset_bottom = 16.0
button_mask = 7

[node name="WarningContainer1" type="MarginContainer" parent="CustomizeContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 60

[node name="CenterContainer" type="CenterContainer" parent="CustomizeContainer/MarginContainer/VBoxContainer/WarningContainer1"]
layout_mode = 2

[node name="WarningLabel1" type="Label" parent="CustomizeContainer/MarginContainer/VBoxContainer/WarningContainer1/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0)
text = "Warning! This action cannot be"

[node name="TitleContainer" type="MarginContainer" parent="CustomizeContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CustomizeContainer/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_right = 3

[node name="Panel" type="Panel" parent="CustomizeContainer/MarginContainer/VBoxContainer/TitleContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iraag")

[node name="CenterContainer" type="CenterContainer" parent="CustomizeContainer/MarginContainer/VBoxContainer/TitleContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CustomizeContainer/MarginContainer/VBoxContainer/TitleContainer/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "UNDONE"

[node name="WarningContainer2" type="MarginContainer" parent="CustomizeContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CustomizeContainer/MarginContainer/VBoxContainer/WarningContainer2"]
layout_mode = 2

[node name="WarningLabel2" type="Label" parent="CustomizeContainer/MarginContainer/VBoxContainer/WarningContainer2/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0)
text = "Continue?"
